# hungthinh_logs_time

./: 1.0.0  README.md  package-lock.json  package.json  svelte.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: game.rs  mod.rs  player.rs  team.rs  timer.rs
src-tauri/src/migrations/0000000000_diesel_initial_setup/: up.sql
src-tauri/src/migrations/2024-10-14-160204_create_players/: up.sql
src-tauri/src/migrations/2024-10-15-015616_create_teams/: down.sql  up.sql
src-tauri/src/migrations/2024-10-15-033538_create_player_team/: up.sql
src-tauri/src/migrations/2024-10-15-072537_create_game/: up.sql
src-tauri/src/model/: game.rs  mod.rs  player.rs  schema.rs  team.rs  timer.rs
src-tauri/src/request/: game.rs  mod.rs  player.rs  timer.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/match/: +page.svelte  match.ts  team.ts
src/routes/team/: +page.svelte
